oc/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name:  spring-boot-route
spec:
  to:
    kind: Service
    name: spring-boot-app-service
  port:
    targetPort: 8081
  tls:
    termination: edge
  wildcardPolicy: None
